# aula18_bootcamp

./: exemplo_00.py  pokemon.db  pyproject.toml
src/: controller.py  models.py  schema.py
